Prevent footer overlap of page content

--- a/app/assets/stylesheets/scss/partials/_globals.scss
+++ b/app/assets/stylesheets/scss/partials/_globals.scss
@@ -12,6 +12,7 @@ html {
   overflow: hidden;
   background-color: rgba(white,.75);
   min-height: 1000px;
+  padding-bottom: 60px;
 }
 
 a {
